[package]
name = "svgr"
version = "0.28.4"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "skia"]
license = "MPL-2.0"
edition = "2018"
description = "An SVG rendering library."
repository = "https://github.com/RazrFalcon/svgr"
exclude = ["tests"]

[workspace]
members = ["svgfilters", "svgrtypes", "usvgr"]

[[bin]]
name = "svgr"
required-features = ["filter", "text", "system-fonts", "memmap-fonts"]

[dependencies]
gif = { version = "0.11", optional = true }
jpeg-decoder = { version = "0.3", default-features = false, features = ["platform_independent"], optional = true }
log = "0.4"
pico-args =  { version = "0.5", features = ["eq-separator"] }
png = { version = "=0.17.6", optional = true } # pin version to match flate2 miniz_oxide version
rgb = "0.8"
svgfilters = { path = "svgfilters", version = "0.4", optional = true }
svgrtypes =  { path = "svgrtypes", version = "0.28.4" }
tiny-skia = "0.8.3"
usvgr = { path = "usvgr", version = "0.28.4", default-features = false }
usvgr-text-layout = { path = "usvgr-text-layout", version = "0.28.4", default-features = false, optional = true }
lru = "0.9.0"

[dev-dependencies]
once_cell = "1.5"
image = "0.24.3"
png = "0.17.5"

[features]
default = ["filter", "text", "system-fonts", "memmap-fonts", "raster-images"]
# Enables SVG Filter support.
# Adds around 100KiB to your binary.
filter = ["svgfilters"]
# Enables SVG Text support.
# Adds around 400KiB to your binary.
text = ["usvgr-text-layout"]
# Enables system fonts loading (only for `text`).
system-fonts = ["usvgr-text-layout/system-fonts"]
# Enables font files memmaping for faster loading (only for `text`).
memmap-fonts = ["usvgr-text-layout/memmap-fonts"]
# Enables decoding and rendering of raster images.
# When disabled, `image` elements with SVG data will still be rendered.
# Adds around 200KiB to your binary.
raster-images = ["gif", "jpeg-decoder", "png"]
dump-svg = []